crates/sm-emit/tests/snapshots/reindentation__a_block_comment_interior_is_reindented.snap
---
source: crates/sm-emit/tests/reindentation.rs
expression: m.text()
---
class C {
  void a() {
    if (ok) {
      /* one
         two */
      x2();
    }
  }
}
