crates/sm-emit/tests/snapshots/reindentation__a_doubly_wrapped_block_shifts_by_the_observed_amount.snap
---
source: crates/sm-emit/tests/reindentation.rs
expression: m.text()
---
class C {
  void a() {
    if (p) {
      if (q) {
        x();
        y2();
      }
    }
  }
}
