crates/sm-emit/tests/snapshots/reindentation__a_text_block_interior_is_never_touched.snap
---
source: crates/sm-emit/tests/reindentation.rs
expression: text
---
class C {
  void a() {
    if (ok) {
      String s = """
        keep
          me
        """;
      after();
    }
  }
}
