crates/sm-emit/tests/snapshots/reindentation__a_wrapped_block_reindents_the_other_sides_edit.snap
---
source: crates/sm-emit/tests/reindentation.rs
expression: m.text()
---
class C {
  void a() {
    if (ok) {
      x();
      y2();
    }
  }
}
