crates/sm-emit/tests/snapshots/reindentation__reindentation_can_be_switched_off.snap
---
source: crates/sm-emit/tests/reindentation.rs
expression: m.text()
---
class C {
  void a() {
    if (ok) {
    x();
    y2();
  }
  }
}
